Introduce the latency optimizer algorithm